# pmt-logera

./: .clang-format  .clang-tidy  .clangd  CMakeLists.txt  Makefile  README.md  README.txt
cmake/: FindPCRE2.cmake
example/: header.lh  header.txt  header_2.txt  w_0001.txt  w_0002.txt  w_0003.txt
include/: archive.h  archive_data.h  log_date.h  logera.h  logera_data.h  parse_error.h
lib/: CMakeLists.txt  algo.c  algo.h  ast.c  ast.h  errors.c  errors.cpp  errors.h  flyweight_string.cpp  io.c  io.cpp  io.h  levenshtein.cpp  lexer.c  lexer.cpp  lexer.h  lexer.rl  logera_data.c  logera_data.h  opaque_vector.c  opaque_vector.h  parser.c  parser.cpp  parser.h  passes.c  passes.h  re.c  re.h  sema.cpp  tokens.c  tokens.h
lib/passes/: CMakeLists.txt  date_pass.cpp  decl_order_check_pass.cpp  decl_var_val_check_pass.cpp  dup_entry_val_check_pass.cpp  entry_creation_pass.cpp  entry_validation_pass.cpp  file_sort_pass.cpp  merge_dup_decl_pass.cpp  pass_util.cpp  pass_util.hpp  rm_dup_decl_vals_pass.cpp  split_decl_pass.cpp
logera/: CMakeLists.txt
src/: CMakeLists.txt  README.md  algo-inl.hpp  algo.hpp  archive.cc  archive_data.cc  ast-inl.hpp  ast.cpp  ast.hpp  attributes.cc  cmdl_exception.h  common_types.h  config.cc  config.h  csv_generator.cc  csv_generator.h  date.cc  date.h  debug.cc  debug.h  errors.cpp  errors.hpp  flyweight_string.cpp  flyweight_string.hpp  header_data.cc  header_data.h  header_lexer.cc  header_lexer.h  header_parser.cc  header_parser.h  header_parser.ih  header_parser_base.cc  header_parser_base.h  header_parser_base_preinclude.h  header_parser_context.cc  header_parser_context.h  header_parser_grammar  header_parser_parse.cc  header_parserbase.h  header_scanner.h  (+69 more)
src/arg_parser/: arg_parser.cc  arg_parser.h
src/args/: arg_cvt_functions.cc  arg_list.h  args-inl.h  args.cc  args.h  args.ih  args.inl  opt.cc  opt.inl
src/args_base/: args_base.h  args_base.hi
src/ast/: ast-inl.h  ast.h  ast_visitor-inl.h  ast_visitor.h  header_nodes.h  log_nodes.h  node_common.h
src/attribute/: attribute.cc  attribute.h  attribute_enums.hi
src/attributes/: attributes.cc  attributes.h
src/config/: config.cc  config.h  config.ih  config_cvt_funcs.cc  config_getters.cc  config_setters.cc
src/csv_data/: csv_data.h
src/csv_generator/: csv_generator.cc  csv_generator.h
src/date/: date.cc  date.h  date.ih  utils.cc
src/dump_ast/: CMakeLists.txt  dump_ast.cpp  main.cpp
src/fmt/: fmt_notation_cvt.cc  fmt_notation_identify.cc  fmt_notations.h  fmt_specifiers.h
src/grammar_lex/: header_lexer.rl  header_parser  lexer  log_lexer.rl  log_parser
src/header_data/: header_data.cc  header_data.h
src/header_parser/: grammar  header_parser.cc  header_parser.h  header_parser.ih  header_parserbase.h  parse.cc  util.cc  util.h
src/header_scanner/: header_scanner.h  header_scanner.ih  header_scannerbase.h  header_token_enums.h  lex.cc  lexer
src/input_error/: input_error.h
src/lexer/: header_lexer.cc  header_lexer.h  header_lexer.rl  lexed_buffer.cc  lexed_buffer.h  lexed_file.cc  lexed_file.h  lexer.cc  lexer.h  lexer.rl  lexer_base-inl.h  lexer_base.h  log_lexer.cc  log_lexer.h  log_lexer.rl  tokens.h
src/log_data/: const_iterator.cc  const_iterator.hi  log_data.cc  log_data.h  log_line.h
src/log_data_modifier/: log_data_modifier.cc  log_data_modifier.h
src/log_parser/: grammar  log_parser.cc  log_parser.h  log_parser.ih  log_parserbase.h  parse.cc
src/log_scanner/: lex.cc  lexer  log_scanner.h  log_scanner.ih  log_scannerbase.h  log_token_enums.h  log_tokens.hi
src/options/: options.cc  options.h  options.ih  options_cvt_funcs.cc  options_getters.cc  options_setters.cc
src/parser/: CMakeLists.txt  ast_nodes.h  header_parser  header_parser.cc  header_parser.h  header_parser_base.cc  header_parser_base.h  header_parser_base_preinclude.h  header_parser_context.cc  header_parser_context.h  log_parser  log_parser.cc  log_parser.h  log_parser_base.cc  log_parser_base.h  log_parser_base_preinclude.h  log_parser_context.cc  log_parser_context.h  parser  parser.cc  parser.h  parser_base.cc  parser_base.h  parser_base_preinclude.h
src/program/: program.cc  program.h
src/regex_filters/: exclusive_regex_filter.h  inclusive_regex_filter.h  regex_filter_base.h
src/scanner/: lex.cc  lexer  scanner.h  scanner.ih  scannerbase.h  token_enums.h  token_enums.hi
src/sema/: header_data_builder.cc  header_data_builder.h  log_data_builder.cc  log_data_builder.h  regex_matcher.cc  regex_matcher.h  sema.cc  sema.h  semantic_checker.h  typed_header_ast.h  typed_header_ast_builder.cc  typed_header_ast_builder.h  typed_log_ast.h  typed_log_ast_builder.cc  typed_log_ast_builder.h
src/sparse_array/: sparse_array-inl.h  sparse_array.h  sparse_array.hi  sparse_array.inl
src/string_util/: string_util.cc  string_util.h
src/to_csv/: CMakeLists.txt  args.cpp  args.hpp  cmdl_exception.hpp  csv-inl.hpp  csv.cpp  csv.hpp  csv_emitter.cc  csv_emitter.cpp  csv_emitter.h  csv_emitter.hpp  main.cc  main.cpp  program_opts.cc  program_opts.cpp  program_opts.h  program_opts.hpp
src/utility/: indirect_rearrange-inl.h  read_file_portable-inl.h  read_file_unix-inl.h  utility.cc  utility.h
src/writer/: writer.cc  writer.h
test/: CMakeLists.txt  a.out  args_test.cc  date_test.cc  print_ast.c  print_ast.cpp  print_header_ast.cc  print_header_tokens.cc  print_log_ast.cc  print_log_tokens.cc  print_tokens.c  print_tokens.cc  print_typed_ast.cc  print_typed_header_ast.cc  print_typed_log_ast.cc  sparse_array_test.cc  test.cc  test.cpp  test.hpp  test_combi_parse.cpp  test_file_parse_task.cpp  test_file_reader.cpp  test_io.cpp  test_levenshtein.cpp  test_lexer.cpp  token_names.h
test/src/: Makefile  cmake_install.cmake
test/src/to_csv/: Makefile  cmake_install.cmake
test/unit/: CMakeLists.txt  sparse_array_test.cc  test.c  test.cpp  test_algo.c  test_io.c  test_io.cpp  test_lexer.c  test_lexer.cpp  test_opaque_vector.c
tools/: clang-tidy-config  header_tokens.h  log_tokens.h  run_bisonc++.py  run_bisonc++.sh  run_bisoncpp.py  run_clang-format.py  run_clang-format.sh  (+6 more)
(+82 files in other folders)
